packages/svelte/tests/compiler-errors/samples/empty-attribute-shorthand/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'attribute_empty_shorthand',
		message: 'Attribute shorthand cannot be empty',
		position: [6, 6]
	}
});
